--- a/dTV/dTV.RC
+++ b/dTV/dTV.RC
@@ -312,109 +312,6 @@ BEGIN
     LTEXT           "(Ext. 1)",IDC_STATIC,120,110,35,10
 END
 
-TUNERSETTINGS DIALOG DISCARDABLE  22, 17, 279, 165
-STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
-CAPTION "dTV Manual Tuner Parameters"
-FONT 8, "MS Sans Serif"
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,220,145,55,15
-    PUSHBUTTON      "Cancel",IDCANCEL,155,145,55,15
-    RTEXT           "",IDT_THRESH1,55,50,40,10,SS_CENTERIMAGE
-    LTEXT           "VHF - Low",IDC_STATIC,10,50,40,10
-    RTEXT           "",IDT_THRESH2,55,65,40,10,SS_CENTERIMAGE
-    LTEXT           "VHF - High",IDC_STATIC,10,65,40,10
-    LTEXT           "ID",IDC_STATIC,100,50,10,10,SS_CENTERIMAGE
-    LTEXT           "ID",IDC_STATIC,100,65,10,10,SS_CENTERIMAGE
-    LTEXT           "ID",IDC_STATIC,100,80,10,10,SS_CENTERIMAGE
-    RTEXT           "",IDT_VHF_L,110,50,15,10,SS_CENTERIMAGE
-    RTEXT           "",IDT_VHF_H,110,65,15,10,SS_CENTERIMAGE
-    RTEXT           "",IDT_UHF,110,80,15,10,SS_CENTERIMAGE
-    LTEXT           "UHF",IDC_STATIC,10,80,75,10,SS_CENTERIMAGE
-    GROUPBOX        "Allowed Tuners",IDC_STATIC,5,20,130,120
-    LTEXT           "Configuration Byte",IDC_STATIC,10,95,65,10,
-                    SS_CENTERIMAGE
-    RTEXT           "",IDT_CONFIG,110,95,15,10,SS_CENTERIMAGE
-    LTEXT           "I2C Bus-Address",IDC_STATIC,10,110,65,10,SS_CENTERIMAGE
-    RTEXT           "",IDT_I2C,110,110,15,10,SS_CENTERIMAGE
-    LTEXT           "Frequency-Offset",IDC_STATIC,10,125,65,10,
-                    SS_CENTERIMAGE
-    RTEXT           "",IDT_IFPCoff,110,125,15,10,SS_CENTERIMAGE
-    GROUPBOX        "Manual Tuner Parameter",IDC_STATIC,140,20,135,120
-    LTEXT           "VHF - Low",IDC_STATIC,150,50,40,10
-    LTEXT           "VHF - High",IDC_STATIC,150,65,40,10
-    LTEXT           "ID",IDC_STATIC,240,50,10,10,SS_CENTERIMAGE
-    LTEXT           "ID",IDC_STATIC,240,65,10,10,SS_CENTERIMAGE
-    LTEXT           "ID",IDC_STATIC,240,80,10,10,SS_CENTERIMAGE
-    LTEXT           "UHF",IDC_STATIC,150,80,75,10,SS_CENTERIMAGE
-    LTEXT           "Configuration Byte",IDC_STATIC,150,95,65,10,
-                    SS_CENTERIMAGE
-    LTEXT           "I2C Bus-Address (autom.)",IDC_STATIC,150,110,90,10,
-                    SS_CENTERIMAGE
-    LTEXT           "Frequency-Offset",IDC_STATIC,150,125,65,10,
-                    SS_CENTERIMAGE
-    EDITTEXT        IDM_THRESH1,195,50,35,10,ES_RIGHT | ES_NUMBER
-    EDITTEXT        IDM_THRESH2,195,65,35,10,ES_RIGHT | ES_NUMBER
-    EDITTEXT        IDM_VHF_L,250,50,20,10,ES_RIGHT | ES_NUMBER
-    EDITTEXT        IDM_VHF_H,250,65,20,10,ES_RIGHT | ES_NUMBER
-    EDITTEXT        IDM_UHF,250,80,20,10,ES_RIGHT | ES_NUMBER
-    EDITTEXT        IDM_CONFIG,250,95,20,10,ES_RIGHT | ES_NUMBER
-    RTEXT           "",IDT_I2C2,250,110,20,10,SS_CENTERIMAGE
-    EDITTEXT        IDM_IFPCoff,250,125,20,10,ES_RIGHT | ES_NUMBER
-    PUSHBUTTON      "Set Tuner Parameter",IDSET,10,145,80,15
-    LTEXT           "Current frequency",IDC_STATIC,65,5,60,10
-    EDITTEXT        IDC_FREQ,130,5,50,10,ES_AUTOHSCROLL
-    LTEXT           "Mhz",IDC_STATIC,185,5,15,10
-    COMBOBOX        IDC_COMBO1,15,30,110,110,CBS_DROPDOWNLIST | WS_VSCROLL | 
-                    WS_TABSTOP
-END
-
-CARDTYPE DIALOG DISCARDABLE  22, 17, 172, 156
-STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
-CAPTION "Create Custom Card Type"
-FONT 8, "MS Sans Serif"
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,125,135,40,15
-    PUSHBUTTON      "Cancel",IDCANCEL,5,135,40,15
-    PUSHBUTTON      "Test",IDSET,65,135,40,15
-    LTEXT           "BT848_GPIO_OUT_EN ",IDC_STATIC,5,10,95,10
-    LTEXT           "BT848_GPIO_DATA / Tuner",IDC_STATIC,5,40,95,10
-    LTEXT           "BT848_GPIO_DATA /  Radio",IDC_STATIC,5,55,95,10
-    LTEXT           "BT848_GPIO_DATA / Extern",IDC_STATIC,5,70,95,10
-    LTEXT           "BT848_GPIO_DATA /  Intern",IDC_STATIC,5,85,95,10
-    LTEXT           "BT848_GPIO_DATA /  Out",IDC_STATIC,5,100,95,10
-    EDITTEXT        IDC_EDIT1,105,10,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    EDITTEXT        IDC_EDIT2,105,40,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    EDITTEXT        IDC_EDIT3,105,55,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    EDITTEXT        IDC_EDIT4,105,70,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    EDITTEXT        IDC_EDIT5,105,85,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    EDITTEXT        IDC_EDIT6,105,100,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    CONTROL         "Radio1",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON,151,40,
-                    10,10
-    CONTROL         "Radio1",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,151,55,
-                    10,10
-    CONTROL         "Radio1",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,151,70,
-                    10,10
-    CONTROL         "Radio1",IDC_RADIO4,"Button",BS_AUTORADIOBUTTON,151,85,
-                    10,10
-    CONTROL         "Radio1",IDC_RADIO5,"Button",BS_AUTORADIOBUTTON,151,100,
-                    10,10
-    LTEXT           "Test",IDC_STATIC,145,10,25,10
-    LTEXT           "BT848_GPIO_DATA /  On",IDC_STATIC,5,115,85,10
-    EDITTEXT        IDC_EDIT7,105,115,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    CONTROL         "Radio1",IDC_RADIO6,"Button",BS_AUTORADIOBUTTON,151,115,
-                    10,10
-    LTEXT           "BT848_GPIO_REG_INP ",IDC_STATIC,5,25,95,10
-    EDITTEXT        IDC_EDIT8,105,25,35,10,ES_RIGHT | ES_AUTOHSCROLL | 
-                    ES_NUMBER
-END
-
 AUDIOEINSTELLUNGEN1 DIALOG DISCARDABLE  0, 0, 257, 175
 STYLE DS_SYSMODAL | DS_SETFOREGROUND | DS_3DLOOK | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
@@ -536,30 +433,30 @@ BEGIN
     EDITTEXT        TEXT1,50,20,145,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     LTEXT           "Size",IDC_STATIC,10,35,40,10
-    EDITTEXT        TEXT2,165,35,30,10,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        TEXT2,165,35,30,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     EDITTEXT        TEXT10,10,120,185,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     LTEXT           "Packet Number",IDC_STATIC,10,60,55,10
-    EDITTEXT        TEXT3,100,60,30,10,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        TEXT3,100,60,30,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     LTEXT           "of",IDC_STATIC,140,60,15,10
-    EDITTEXT        TEXT4,165,60,30,10,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        TEXT4,165,60,30,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     LTEXT           "Packetsize",IDC_STATIC,10,75,55,10
-    EDITTEXT        TEXT5,100,75,30,10,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        TEXT5,100,75,30,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     LTEXT           "of",IDC_STATIC,140,90,15,10
-    EDITTEXT        TEXT6,165,90,30,10,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        TEXT6,165,90,30,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    EDITTEXT        TEXT9,100,90,30,10,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        TEXT9,100,90,30,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     GROUPBOX        "Last File",IDC_STATIC,5,10,195,40
     LTEXT           "Bytes received",IDC_STATIC,10,90,80,10
     GROUPBOX        "Last error",IDC_STATIC,5,105,195,30
     GROUPBOX        "Current receive",IDC_STATIC,5,50,195,55
     LTEXT           "VBI-FPS",IDC_STATIC,135,0,30,10
-    EDITTEXT        IDT_VBI_FPS,171,0,25,10,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        IDT_VBI_FPS,171,0,25,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
 END
 
@@ -715,12 +612,12 @@ CAPTION "About dTV"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,149,272,65,14,WS_GROUP
-    CTEXT           "dTV Version 1.0",IDC_STATIC,4,0,352,10
+    CTEXT           "dTV Version 1.3",IDC_STATIC,4,3,352,10
     CTEXT           "Copyright (c) 2000 John Adcock (johnadcock@hotmail.com)",
-                    IDC_STATIC,4,12,352,10
+                    IDC_STATIC,4,15,352,10
     LTEXT           "Sebastian for the  Videodata Info",IDC_STATIC,5,143,170,
                     9
-    GROUPBOX        "Based on Multi-Dec 5.6",IDC_STATIC,0,86,370,72
+    GROUPBOX        "Based on Multi-Dec 5.6",IDC_STATIC,0,107,370,51
     GROUPBOX        "Parts From Linux",IDC_STATIC,0,160,370,49
     LTEXT           "bttv - Bt848 frame grabber driver\nCopyright (C) 1996,97,98 Ralph  Metzler && Marcus Metzler",
                     IDC_STATIC,5,170,172,24
@@ -735,18 +632,21 @@ BEGIN
                     IDC_STATIC,3,219,360,24
     LTEXT           "This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.",
                     IDC_STATIC,3,243,367,24
-    LTEXT           "Most of the code was taken from the German Cable decoding program MultiDec",
-                    IDC_STATIC,5,97,345,10
     LTEXT           "MultiDec Source (c) Espresso (echter_espresso@hotmail.com)",
-                    IDC_STATIC,5,108,348,8
-    GROUPBOX        "Thanks",IDC_STATIC,0,29,370,53
-    LTEXT           "Original Thanks For revelant parts",IDC_STATIC,5,120,
-                    195,10
+                    IDC_STATIC,5,118,348,8
+    GROUPBOX        "Thanks",IDC_STATIC,0,29,370,74
     LTEXT           "Ron Bass for help with 95 vxd",IDC_STATIC,6,40,122,10
     LTEXT           "All at the AVScience HT Computers Forum",IDC_STATIC,5,
                     53,171,9
     LTEXT           "Mathias Ellinger for most of the hardware driver",
-                    IDC_STATIC,5,66,182,9
+                    IDC_STATIC,5,66,158,9
+    LTEXT           "Mark Rejhon for 3:2 pulldown algorithm",IDC_STATIC,186,
+                    39,172,10
+    LTEXT           "The developers of VirtualDub",IDC_STATIC,186,52,171,9
+    LTEXT           "Borg for the deinterlacing plug-in",IDC_STATIC,186,65,
+                    165,9
+    LTEXT           "Timecop for the Closed Caption decoder",IDC_STATIC,5,79,
+                    158,9
 END
 
 VDSETUP DIALOG DISCARDABLE  22, 17, 157, 130
@@ -863,7 +763,7 @@ BEGIN
     LTEXT           "Programme",-1,66,70,32,12,SS_CENTERIMAGE
     CONTROL         "Channels",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,10,6,118,10
-    COMBOBOX        IDC_COMBO1,132,4,126,56,CBS_DROPDOWN | WS_VSCROLL | 
+    COMBOBOX        IDC_COMBO1,132,4,126,56,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     LTEXT           "VideoStatus",-1,66,50,42,12,SS_CENTERIMAGE
     DEFPUSHBUTTON   "OK",IDOK,6,100,44,14,WS_DISABLED | WS_GROUP
@@ -915,8 +815,27 @@ BEGIN
                     WS_TABSTOP,10,76,115,10
     CONTROL         "HTML invisible fields output",IDC_CHECK4,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,10,86,135,10
-    CONTROL         "Alles automatic Export",IDC_CHECK5,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,5,35,135,10
+    CONTROL         "Automatic Export",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,5,35,135,10
+END
+
+SELECTCARD DIALOG DISCARDABLE  0, 0, 298, 122
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Select Card Type"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,7,101,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,65,101,50,14
+    LTEXT           "Card",IDC_STATIC,14,58,34,9
+    LTEXT           "Tuner",IDC_STATIC,14,80,38,9
+    COMBOBOX        IDC_CARDSSELECT,73,57,178,190,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_TUNERSELECT,73,80,178,190,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Use this dialog to select the card closest to your card type.\nSome tuners are autodetected and will be selected here.  Otherwise you must try and find out what tuner you have.",
+                    IDC_STATIC,7,7,284,25
+    LTEXT           "The easiest way is by looking at the documenation that came with the card otherwise you will have to see if there is any marking oin the silver tuner box on the card.",
+                    IDC_STATIC,7,34,284,22
 END
 
 
@@ -983,10 +902,11 @@ BEGIN
     POPUP "&View"
     BEGIN
         MENUITEM "Toggle &Menu\tF4",            IDM_TOGGLE_MENU
-        MENUITEM "Toggle Stat&us Bar\tS",       IDM_STATUSBAR
+        MENUITEM "Toggle Stat&us Bar\tS",       IDM_STATUSBAR, CHECKED
         MENUITEM "&Full Screen\tF6",            IDM_FULL_SCREEN
         MENUITEM "&Always on Top",              IDM_ON_TOP
         MENUITEM "&Pause\tp",                   IDM_CAPTURE_PAUSE
+        MENUITEM "Toggle Show &Cursor\tF5",     IDM_TOGGLECURSOR
     END
     POPUP "&Settings"
     BEGIN
@@ -995,9 +915,9 @@ BEGIN
         BEGIN
             MENUITEM "&Tuner",                      IDM_TUNER
             MENUITEM "&Composite",                  IDM_EXTERN1
-            MENUITEM "&Other",                      IDM_EXTERN2
-            MENUITEM "&S-Video",                    IDM_EXTERN3
-            MENUITEM SEPARATOR
+            MENUITEM "&S-Video",                    IDM_EXTERN2
+            MENUITEM "&Other 1",                    IDM_EXTERN2
+            MENUITEM "&Other 2",                    IDM_EXTERN4
         END
         POPUP "Video &Format"
         BEGIN
@@ -1011,40 +931,8 @@ BEGIN
     END
     POPUP "&Hardware"
     BEGIN
-        POPUP "TV-Card"
-        BEGIN
-            MENUITEM "&Miro",                       IDM_KARTE0
-            MENUITEM "&Hauppauge",                  IDM_KARTE1
-            MENUITEM "&STB",                        IDM_KARTE2
-            MENUITEM "&Intel",                      IDM_KARTE3
-            MENUITEM "&Diamond",                    IDM_KARTE4
-            MENUITEM "&AVerMedia",                  IDM_KARTE5
-            MENUITEM "Other Card Type",             IDM_KARTE6
-            MENUITEM SEPARATOR
-            MENUITEM "Manual Card Setup",           IDM_MANUELL_CARD
-            MENUITEM "Don't touch card",            IDM_DONT_TOUCH_CARD
-        END
-        POPUP "Select &Tuner"
-        BEGIN
-            MENUITEM "&Temic Pal",                  IDM_TUNER_0
-            MENUITEM "Temic Pal &I",                IDM_TUNER_7
-            MENUITEM "Temic &NTSC",                 IDM_TUNER_6
-            MENUITEM "&Philips Pal",                IDM_TUNER_5
-            MENUITEM "P&hilips Pal I",              IDM_TUNER_1
-            MENUITEM "Philips NTS&C",               IDM_TUNER_2
-            MENUITEM "Philips &Secam",              IDM_TUNER_3
-            MENUITEM "&No Tuner (Only SOURCE switch)", IDM_TUNER_4
-            MENUITEM "&Manual Tuner",               IDM_TUNER_8
-            MENUITEM SEPARATOR
-            MENUITEM "Set Tuner-Parameters Manually", IDM_MANUELL_TUNER
-            MENUITEM "Don't touch tuner",           IDM_DONT_TOUCH
-        END
-        MENUITEM "&PLL - Settings ...",         IDM_PLL
-    END
-    POPUP "A&dvanced"
-    BEGIN
-        MENUITEM "IFORM - Parameters",          IDM_IFORM
-        MENUITEM "&Hardware-Info",              IDM_HWINFO
+        MENUITEM "&Select Video Card ...",      IDM_SETUPCARD
+        MENUITEM "&Hardware Info ...",          IDM_HWINFO
         POPUP "MSP/Radio"
         BEGIN
             MENUITEM "&Tone - Control",             IDM_AUDIOSETTINGS
@@ -1082,6 +970,10 @@ BEGIN
             MENUITEM SEPARATOR
             MENUITEM "Automatic Stereo Adjustment", IDM_AUTOSTEREO
         END
+        MENUITEM "BT Reset",                    IDM_RESET
+    END
+    POPUP "A&dvanced"
+    BEGIN
         POPUP "&Audio"
         BEGIN
             MENUITEM "&Tuner",                      IDM_AUDIO_0
@@ -1093,11 +985,7 @@ BEGIN
             MENUITEM "Audio on",                    IDM_AUDIO_5
         END
         MENUITEM "Audio-Mi&xer Setup",          IDM_AUDIO_MIXER
-        POPUP "&Capture"
-        BEGIN
-            MENUITEM "&Video",                      IDM_VIDEO
-            MENUITEM "VBI-&Data",                   IDM_VBI
-        END
+        MENUITEM "Capture VBI-&Data",           IDM_VBI
         POPUP "Thread &Priorities"
         BEGIN
             POPUP "Program"
@@ -1115,7 +1003,6 @@ BEGIN
                 MENUITEM "THREAD_PRIORITY_TIME_CRITICAL", IDM_TREADPRIOR_4
             END
         END
-        MENUITEM "BT Reset",                    IDM_RESET
     END
     POPUP "Video&Data"
     BEGIN
@@ -1123,6 +1010,7 @@ BEGIN
         MENUITEM "&InterCast",                  IDM_VBI_IC, GRAYED
         MENUITEM "V&PS-Data",                   IDM_VBI_VPS, GRAYED
         MENUITEM "Video&Data",                  IDM_VBI_VD, GRAYED
+        MENUITEM "&Closed Captions",            IDM_CLOSEDCAPTION, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "&Small VideoText Window",     IDM_CALL_VIDEOTEXTSMALL
         , GRAYED
@@ -1140,7 +1028,6 @@ BEGIN
         MENUITEM "VideoText Setup",             IDM_VT_SETUP
         MENUITEM "InterCast Setup",             IDM_INTERCAST_SETUP
         MENUITEM "VideoDat Setup",              IDM_VIDEODAT_SETUP
-        MENUITEM SEPARATOR
     END
     POPUP "&Help"
     BEGIN
@@ -1216,18 +1103,6 @@ BEGIN
         BOTTOMMARGIN, 152
     END
 
-    "TUNERSETTINGS", DIALOG
-    BEGIN
-        RIGHTMARGIN, 272
-        BOTTOMMARGIN, 122
-    END
-
-    "CARDTYPE", DIALOG
-    BEGIN
-        RIGHTMARGIN, 165
-        BOTTOMMARGIN, 113
-    END
-
     "AUDIOEINSTELLUNGEN1", DIALOG
     BEGIN
         LEFTMARGIN, 7
@@ -1255,7 +1130,7 @@ BEGIN
 
     "ICSTATUS", DIALOG
     BEGIN
-        RIGHTMARGIN, 82
+        RIGHTMARGIN, 200
         BOTTOMMARGIN, 153
     END
 
@@ -1307,12 +1182,6 @@ BEGIN
         BOTTOMMARGIN, 228
     END
 
-    "ANALOGSCAN", DIALOG
-    BEGIN
-        RIGHTMARGIN, 175
-        BOTTOMMARGIN, 101
-    END
-
     "LISTFELDSETUP", DIALOG
     BEGIN
         RIGHTMARGIN, 189
@@ -1328,6 +1197,14 @@ BEGIN
     BEGIN
         RIGHTMARGIN, 155
         BOTTOMMARGIN, 123
+    END
+
+    "SELECTCARD", DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 291
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 115
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -1402,8 +1279,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_UK
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,1,1
- PRODUCTVERSION 1,0,1,1
+ FILEVERSION 1,0,3,1
+ PRODUCTVERSION 1,0,3,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -1421,14 +1298,14 @@ BEGIN
             VALUE "Comments", "John Adcock\0"
             VALUE "CompanyName", "\0"
             VALUE "FileDescription", "dTV\0"
-            VALUE "FileVersion", "1, 0, 1, 1\0"
+            VALUE "FileVersion", "1, 0, 3, 1\0"
             VALUE "InternalName", "dTV\0"
             VALUE "LegalCopyright", "Copyright © 2000\0"
             VALUE "LegalTrademarks", "This Program is covered by the term of the GNU GPL\0"
             VALUE "OriginalFilename", "dTV.exe\0"
             VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "dTV\0"
-            VALUE "ProductVersion", "1, 0, 1, 1\0"
+            VALUE "ProductVersion", "1, 0, 3, 1\0"
             VALUE "SpecialBuild", "\0"
         END
     END
