--- a/dTV/dTV.RC
+++ b/dTV/dTV.RC
@@ -58,7 +58,7 @@ BEGIN
     GROUPBOX        "Video-Subsystem",IDC_STATIC,3,102,195,50
 END
 
-KANALLISTE DIALOG DISCARDABLE  22, 17, 499, 156
+CHANNELLIST DIALOG DISCARDABLE  22, 17, 499, 156
 STYLE DS_3DLOOK | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Process Channel List"
 FONT 8, "MS Sans Serif"
@@ -618,7 +618,7 @@ CAPTION "About dTV"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,149,272,65,14,WS_GROUP
-    CTEXT           "dTV Version 1.4",IDC_STATIC,4,3,352,10
+    CTEXT           "dTV Version 1.5",IDC_TEXT1,4,3,352,9
     CTEXT           "Copyright (c) 2000 John Adcock (johnadcock@hotmail.com)",
                     IDC_STATIC,4,15,352,10
     LTEXT           "Sebastian for the  Videodata Info",IDC_STATIC,5,143,170,
@@ -897,12 +897,12 @@ ANALOGMENU MENU DISCARDABLE
 BEGIN
     POPUP "&File"
     BEGIN
-        MENUITEM "E&xit\tEsc",                  IDM_ENDE
+        MENUITEM "E&xit\tEsc",                  IDM_END
     END
     POPUP "&Channels"
     BEGIN
         MENUITEM "Channel &Scan",               IDM_ANALOGSCAN
-        MENUITEM "Channel &List",               IDM_KANAL_LISTE
+        MENUITEM "Channel &List",               IDM_CHANNEL_LIST
         MENUITEM SEPARATOR
         MENUITEM "&Next Channel\tF1",           IDM_CHANNELPLUS
         MENUITEM "&Previous Channel\tF2",       IDM_CHANNELMINUS
@@ -964,6 +964,7 @@ BEGIN
             END
         END
         MENUITEM "Capture VBI-&Data",           IDM_VBI
+        MENUITEM "Automatic Pu&lldown Detect",  IDM_AUTODETECT
     END
     POPUP "&Hardware"
     BEGIN
@@ -1068,7 +1069,7 @@ BEGIN
         BOTTOMMARGIN, 170
     END
 
-    "KANALLISTE", DIALOG
+    "CHANNELLIST", DIALOG
     BEGIN
         RIGHTMARGIN, 455
         BOTTOMMARGIN, 155
@@ -1244,7 +1245,7 @@ BEGIN
     "V",            IDM_VOLUMEPLUS,         VIRTKEY, SHIFT, NOINVERT
     VK_ADD,         IDM_VOLUMEPLUS,         VIRTKEY, NOINVERT
     VK_DOWN,        IDM_VT_PAGE_DOWN,       VIRTKEY, NOINVERT
-    VK_ESCAPE,      IDM_ENDE,               VIRTKEY, NOINVERT
+    VK_ESCAPE,      IDM_END,                VIRTKEY, NOINVERT
     VK_F1,          IDM_CHANNELPLUS,        VIRTKEY, NOINVERT
     VK_F2,          IDM_CHANNELMINUS,       VIRTKEY, NOINVERT
     VK_F4,          IDM_TOGGLE_MENU,        VIRTKEY, NOINVERT
@@ -1287,8 +1288,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_UK
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,4,1
- PRODUCTVERSION 1,0,4,1
+ FILEVERSION 1,0,5,1
+ PRODUCTVERSION 1,0,5,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -1306,14 +1307,14 @@ BEGIN
             VALUE "Comments", "John Adcock\0"
             VALUE "CompanyName", "\0"
             VALUE "FileDescription", "dTV\0"
-            VALUE "FileVersion", "1, 0, 4, 1\0"
+            VALUE "FileVersion", "1, 0, 5, 1\0"
             VALUE "InternalName", "dTV\0"
             VALUE "LegalCopyright", "Copyright © 2000\0"
             VALUE "LegalTrademarks", "This Program is covered by the term of the GNU GPL\0"
             VALUE "OriginalFilename", "dTV.exe\0"
             VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "dTV\0"
-            VALUE "ProductVersion", "1, 0, 4, 1\0"
+            VALUE "ProductVersion", "1, 0, 5, 1\0"
             VALUE "SpecialBuild", "\0"
         END
     END
