--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -612,49 +612,38 @@ BEGIN
     CTEXT           "Balance",TEXT12,260,20,33,10
 END
 
-ABOUT DIALOG DISCARDABLE  22, 17, 372, 286
+ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About dTV"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,149,272,65,14,WS_GROUP
-    CTEXT           "dTV Version 1.5",IDC_TEXT1,4,3,352,9
-    CTEXT           "Copyright (c) 2000 John Adcock (johnadcock@hotmail.com)",
-                    IDC_STATIC,4,15,352,10
-    LTEXT           "Sebastian for the  Videodata Info",IDC_STATIC,5,143,170,
-                    9
-    GROUPBOX        "Based on Multi-Dec 5.6",IDC_STATIC,0,107,370,51
-    GROUPBOX        "Parts From Linux",IDC_STATIC,0,160,370,49
+    DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
+    CTEXT           "dTV Version 1.7",IDC_TEXT1,0,3,293,9
+    CTEXT           "Copyright (C) 2000 John Adcock (johnadcock@hotmail.com)",
+                    IDC_STATIC,0,24,293,10
+    GROUPBOX        "Based On Multi-Dec 5.6",IDC_STATIC,5,101,364,43
+    GROUPBOX        "Parts From Linux",IDC_STATIC,5,148,364,51
     LTEXT           "bttv - Bt848 frame grabber driver\nCopyright (C) 1996,97,98 Ralph  Metzler && Marcus Metzler",
-                    IDC_STATIC,5,170,172,24
+                    IDC_STATIC,11,159,172,24
     LTEXT           "I2C Interface\nCopyright (C)  1998 Gerd Knorr",
-                    IDC_STATIC,185,170,172,18
+                    IDC_STATIC,203,159,160,18
     LTEXT           "programming the msp34* sound processor family\nCopyright (C)  1997,1998 Gerd Knorr",
-                    IDC_STATIC,185,189,172,18
-    GROUPBOX        "GPL Info",IDC_STATIC,0,211,370,58
-    LTEXT           "Chilli for several BugFixes and VT Improvements",
-                    IDC_STATIC,5,131,167,9
+                    IDC_STATIC,203,176,160,18
+    GROUPBOX        "GPL Information && Open Source Policy",IDC_STATIC,5,203,
+                    364,65
     LTEXT           "This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.",
-                    IDC_STATIC,3,219,360,24
+                    IDC_STATIC,11,214,354,24
     LTEXT           "This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.",
-                    IDC_STATIC,3,243,367,24
-    LTEXT           "MultiDec Source (c) Espresso (echter_espresso@hotmail.com)",
-                    IDC_STATIC,5,118,348,8
-    GROUPBOX        "Thanks",IDC_STATIC,0,29,370,74
-    LTEXT           "Ron Bass for help with 95 vxd",IDC_STATIC,6,40,122,10
-    LTEXT           "All at the AVScience HT Computers Forum",IDC_STATIC,5,
-                    53,171,9
-    LTEXT           "Mathias Ellinger for most of the hardware driver",
-                    IDC_STATIC,5,66,158,9
-    LTEXT           "Mark Rejhon for 3:2 pulldown algorithm",IDC_STATIC,186,
-                    39,172,10
-    LTEXT           "The developers of VirtualDub",IDC_STATIC,186,52,171,9
-    LTEXT           "Borg for the deinterlacing plug-in",IDC_STATIC,187,65,
-                    165,9
-    LTEXT           "Timecop for the Closed Caption decoder",IDC_STATIC,5,79,
-                    158,9
-    LTEXT           "Daniel Schmelzer for the cool website",IDC_STATIC,187,
-                    78,174,9
+                    IDC_STATIC,11,238,351,24
+    LTEXT           "MultiDec Source (C) Espresso (echter_espresso@hotmail.com)\nChilli for several Bugfixes and VT Improvements\nSebastian for the  Videodata Info",
+                    IDC_STATIC,11,112,348,27
+    GROUPBOX        "Thanks",IDC_STATIC,5,37,364,60
+    LTEXT           "Ron Bass for help with 95 vxd\nAll at the AVScience HT PC Forum - www.avsforum.com\nMathias Ellinger for most of the hardware driver\nTimecop for the Closed Caption decoder\nMichael Samblanet for Aspect Ratio Control",
+                    IDC_STATIC,12,49,186,42
+    LTEXT           "Mark Rejhon for 3:2 pulldown algorithm\nThe developers of VirtualDub\nBorg for the deinterlacing plug-in\nDaniel Schmelzer for the great website\nAnd countless others, including beta testers, etc.",
+                    IDC_STATIC,203,48,162,43
+    CTEXT           ">>>   http://deinterlace.sourceforge.net   <<<",
+                    IDC_STATIC,0,11,293,10
 END
 
 VDSETUP DIALOG DISCARDABLE  22, 17, 157, 130
@@ -917,6 +906,36 @@ BEGIN
         MENUITEM "Toggle Show &Cursor\tF5",     IDM_TOGGLECURSOR
         MENUITEM "Take Sti&ll Picture\tL",      IDM_TAKESTILL
     END
+    POPUP "&AspectRatio"
+    BEGIN
+        MENUITEM "Disabled (Stretch video to window)\tCtrl-0", 
+                                                IDM_ASPECT_NONE
+        MENUITEM "4:3 or Letterboxed Non-Anamorphic Source\tCtrl-1", 
+                                                IDM_ASPECT_LETTERBOX
+        MENUITEM "16:9 Anamorphic Source\tCtrl-2", IDM_ASPECT_ANAMORPHIC_177
+        POPUP "Aspect Ratio Of Image Within Source"
+        BEGIN
+            MENUITEM "Same as Destination Window\t0", IDM_SASPECT_0
+            MENUITEM "1.33  (4:3)\t1",              IDM_SASPECT_133
+            MENUITEM "1.66\t2",                     IDM_SASPECT_166
+            MENUITEM "1.77  (16:9)\t3",             IDM_SASPECT_177
+            MENUITEM "1.85\t4",                     IDM_SASPECT_185
+            MENUITEM "2.33  (21:9)\t5",             IDM_SASPECT_233
+            MENUITEM "2.35\t6",                     IDM_SASPECT_235
+            MENUITEM "Custom  (from .INI file)\t7", IDM_SASPECT_CUSTOM
+        END
+        POPUP "Display Screen Aspect Ratio"
+        BEGIN
+            MENUITEM "Same as Computer Resolution", IDM_TASPECT_0
+            MENUITEM "1.33  (4:3)",                 IDM_TASPECT_133
+            MENUITEM "1.66",                        IDM_TASPECT_166
+            MENUITEM "1.77  (16:9)",                IDM_TASPECT_177
+            MENUITEM "1.85",                        IDM_TASPECT_185
+            MENUITEM "2.33  (21:9)",                IDM_TASPECT_233
+            MENUITEM "2.35",                        IDM_TASPECT_235
+            MENUITEM "Custom  (from .INI file)",    IDM_TASPECT_CUSTOM
+        END
+    END
     POPUP "&Settings"
     BEGIN
         MENUITEM "&Video Adjustments ...",      IDM_VIDEOSETTINGS
@@ -1166,7 +1185,7 @@ BEGIN
 
     "ABOUT", DIALOG
     BEGIN
-        RIGHTMARGIN, 370
+        RIGHTMARGIN, 372
     END
 
     "VDSETUP", DIALOG
@@ -1223,6 +1242,17 @@ END
 
 ANALOGACCEL ACCELERATORS DISCARDABLE 
 BEGIN
+    "0",            IDM_SASPECT_0,          VIRTKEY, NOINVERT
+    "0",            IDM_ASPECT_NONE,        VIRTKEY, CONTROL, NOINVERT
+    "1",            IDM_SASPECT_133,        VIRTKEY, NOINVERT
+    "1",            IDM_ASPECT_LETTERBOX,   VIRTKEY, CONTROL, NOINVERT
+    "2",            IDM_SASPECT_166,        VIRTKEY, NOINVERT
+    "2",            IDM_ASPECT_ANAMORPHIC_177, VIRTKEY, CONTROL, NOINVERT
+    "3",            IDM_SASPECT_177,        VIRTKEY, NOINVERT
+    "4",            IDM_SASPECT_185,        VIRTKEY, NOINVERT
+    "5",            IDM_SASPECT_233,        VIRTKEY, NOINVERT
+    "6",            IDM_SASPECT_235,        VIRTKEY, NOINVERT
+    "7",            IDM_SASPECT_CUSTOM,     VIRTKEY, NOINVERT
     "B",            IDM_BRIGHTNESSMINUS,    VIRTKEY, NOINVERT
     "B",            IDM_BRIGHTNESSPLUS,     VIRTKEY, SHIFT, NOINVERT
     "C",            IDM_COLORMINUS,         VIRTKEY, NOINVERT
